--- a/src/Components/Add-Edit-Task/Add-Edit-Task.css
+++ b/src/Components/Add-Edit-Task/Add-Edit-Task.css
@@ -94,6 +94,9 @@
     height: 20px;
     margin-left: 3%;
     width: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 
