--- a/src/Components/AdminDashboard/AdminDashboard.css
+++ b/src/Components/AdminDashboard/AdminDashboard.css
@@ -15,13 +15,14 @@ body, html {
 
 h2 {
     text-align: center;
-    color: #224798;
+    color: white;
     margin-bottom: 20px;
 }
 
 h3 {
     margin-top: 20px;
     color: #224798;
+    text-align: center;
 }
 
 form {
